fixed bug of displaying too long string

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -67,6 +67,7 @@ li{
   overflow: auto;
   margin-top: 22px;
   border-radius: 4px;
+  display: grid;
 }
 .waypoints-list_empty{
   margin-top: 0;
@@ -76,8 +77,7 @@ li{
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #efefef;
-  height: 45px;
-  line-height: 45px;
+  min-height: 45px;
   width: 100%;
   padding-left: 1em;
   background-color: white;
@@ -89,9 +89,13 @@ li{
   -ms-user-select: none;
   user-select: none;
 }
+.waypoint-item__text{
+  padding: 11px 0;
+  max-width: 18em;
+  word-break: break-word;
+}
 .waypoint-item:first-child{
   border-radius: 4px 4px 0 0;
-  /* margin-top: 22px; */
 }
 .waypoint-item:last-child{
   border-radius: 0 0 4px 4px;
